# odrive_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
nodes/: odrive_node
scripts/odrive_ros/: odrive_node.py
