<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_ros</name>
  <version>0.0.1</version>
  <description>ODrive motor controller driver for ROS2</description>
  <license>Modified BSD</license>

  <maintainer email="arghyame20buet@gmail.com">Arghya Chatterjee, Jony</maintainer>
  <!-- <url type="website">https://github.com/neomanic/odrive_ros</url> -->

  <exec_depend>ODrive</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
